# esp-hal-template

./: LICENSE-MIT  README.md
.github/workflows/: ci.yml
embassy/: Cargo.toml  cargo-generate.toml  pre-script.rhai  rust-toolchain.toml  rustfmt.toml
embassy/.cargo/: config.toml
embassy/src/: lib.rs
