[package]
name         = "{{ project-name }}"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.79.0"

[[bin]]
name = "firmware"
path = "src/bin/firmware.rs"

[dependencies]
defmt            = "0.3.8"
defmt-rtt        = "0.4.1"
embassy-executor = { version = "0.6.0",  features = ["defmt"] }
embassy-time     = { version = "0.3.2",  features = ["generic-queue-8"] }
esp-backtrace    = { version = "0.14.2", features = ["{{ mcu }}", "defmt", "exception-handler", "panic-handler"] }
esp-hal          = { version = "0.21.0", features = ["{{ mcu }}", "defmt"] }
esp-hal-embassy  = { version = "0.4.0",  features = ["{{ mcu }}", "defmt"] }
static_cell      = "2.1.0"

[profile.release]
debug         = true  # Debug info is useful, and does not affect the size of the final binary
codegen-units = 1     # LLVM can perform better optimizations using a single thread
lto           = "fat" # Attempt to perform optimizations across all crates within the dependency graph
opt-level     = "s"   # Optimize for binary size, but keep loop vectorization enabled
